<resources>
    <string name="app_name">SmartButler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu_home_title">홈</string>
    <string name="main_menu_butler_title">김집사</string>
    <string name="main_menu_life_title">생활</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
    </string-array>


    <string name="life_menu_pill">알약 인식 및 성분 분석</string>
    <string name="life_menu_vr">건강 지킴이</string>
    <string name="life_menu_res">병원 예약 및 택시 예약</string>
    <string name="life_menu_counsel">원격 심리 상담</string>
    <string name="life_menu_food">식단 분석 및 식단 주문</string>




    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
    </string-array>
</resources>
